conf/k8s/02-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website
  namespace: domingo-website
  labels:
    app: website
    name: website
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: website
  template:
    metadata:
      labels:
        name: website
    spec:
      containers:
        - image: domix/website:0.0.2
          name: website
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "200Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
              - name: Host
                value: domingosuarez.com
            initialDelaySeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
              - name: Host
                value: domingosuarez.com
            initialDelaySeconds: 5
            timeoutSeconds: 1
