conf/k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: domingo-website
  labels:
    name: website
spec:
  ports:
  - port: 80
    name: http
  selector:
    name: website
